Spacing fix

--- a/assets/bp.css
+++ b/assets/bp.css
@@ -9,7 +9,6 @@ span.practicelab {
 span.practicetitle {
   color: #005A9C;
   text-decoration: underline;
-  margin-right: 1em;
   margin-bottom: 1em;
 }
 
